Fix bugs on Firefox

--- a/styles/music_player.css
+++ b/styles/music_player.css
@@ -27,7 +27,7 @@ html {
     -webkit-backdrop-filter: blur(15px);
 }
 
-.music-player-controller.chrome {
+.music-player-controller.no-safari {
     background: rgba(255, 255, 255, .62);
 }
 
@@ -94,6 +94,7 @@ html {
     background: transparent;
     -webkit-appearance: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    z-index: 1;
 }
 
 .progress-indicator:focus {
@@ -101,8 +102,11 @@ html {
 }
 
 .progress-indicator::-webkit-slider-runnable-track {
-    z-index: 1;
     background: transparent;
+}
+
+.progress-indicator::-moz-range-track {
+    background: transparent;    
 }
 
 .progress-indicator::-webkit-slider-thumb {
@@ -116,6 +120,17 @@ html {
     box-shadow: 0 0 1px 0 #333, 0 5px 2px -2px rgba(0, 0, 0, .4);
 
     -webkit-appearance: none;
+}
+
+.progress-indicator::-moz-range-thumb {
+    position: relative;
+    top: -200%;
+    width: 15px;
+    height: 15px;
+    border: none;
+    border-radius: 15px;
+    background: #fff;
+    box-shadow: 0 0 1px 0 #333, 0 5px 2px -2px rgba(0, 0, 0, .4);
 }
 
 .slider-runnable-track {
